<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">*</string>
    <string name="button_divide">/</string>
    <string name="valueB">Decimal B</string>
    <string name="valueA">Decimal A</string>
    <string name="result">=0.0</string>
</resources>
