<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAutofill="no"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/bt_plus"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="57dp"
        android:fontFamily="monospace"
        android:text="@string/button_plus"
        android:textSize="30sp"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/bt_minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_valueA" />

    <Button
        android:id="@+id/bt_minus"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="57dp"
        android:fontFamily="monospace"
        android:text="@string/button_minus"
        android:textSize="30sp"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/bt_multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_plus"
        app:layout_constraintTop_toBottomOf="@+id/tb_valueA" />

    <Button
        android:id="@+id/bt_multiply"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="57dp"
        android:fontFamily="monospace"
        android:text="@string/button_multiply"
        android:textSize="30sp"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/bt_divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_minus"
        app:layout_constraintTop_toBottomOf="@+id/tb_valueB" />

    <Button
        android:id="@+id/bt_divide"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="monospace"
        android:text="@string/button_divide"
        android:textSize="30sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_multiply"
        app:layout_constraintTop_toBottomOf="@+id/tb_valueB" />

    <EditText
        android:id="@+id/tb_valueA"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="158dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/valueA"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:text="@string/valueA"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toStartOf="@+id/tb_valueB"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tb_valueB"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="158dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/valueB"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:text="@string/valueB"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tb_valueA"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginStart="206dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="132dp"
        android:fontFamily="serif-monospace"
        android:text="@string/result"
        android:textSize="30sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_multiply"
        app:layout_constraintVertical_bias="0.962" />

</android.support.constraint.ConstraintLayout>